# ML-Model-Catalog-Agent

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: agent.py  api.py  config.py  database.py  main.py  models.py  tools.py
catalogue/: schema.py  seed.py
k8s/: deployment.yaml
tests/: conftest.py  test_tools.py
