[project]
name = "ml-model-catalogue-agent"
version = "0.1.0"
description = "A LangChain agent for querying an ML model catalogue using local vLLM inference."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.10.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.3.0",
    "openai>=1.50.0",
    "langchain-openai>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[tool.setuptools.packages.find]
include = ["app*", "catalogue*"]
